@@ -16,9 +16,7 @@ use subs qw/maybemove temp_header temp_source scan_files_for_pattern/;
 
 # Main loop, dispatch for each command line argument.
 foreach my $command (@ARGV) {
-    if ($command eq "patches") {
-        make_patches;
-    } elsif ($command eq "switches") {
+    if ($command eq "switches") {
         make_switches;
     } elsif ($command eq "commands") {
         make_cmds;
@@ -92,53 +90,6 @@ END {
 }
 
 __DATA__
-
-sub make_patches {
-    print "Rebuilding list of installed patches\n";
-    my $tempfile = temp_header;
-    my $patchfile = "hdrs/patches.h";
-    my $auto_msg = "/* AUTOGENERATED FILE. DO NOT EDIT! */\n";
-    open PATCHES, ">", $tempfile
-        or die "Couldn't open $tempfile for writing: $!\n";
-    print PATCHES $auto_msg;
-    print PATCHES "#ifndef PATCHES_H\n";
-    print PATCHES "#define PATCHES_H\n";
-    my %patches;
-    if (-d "patches") {
-        foreach $file (<patches/*>) {
-            next if $file =~ /(?:\.bak|\.orig|\.rej|~)$/o;
-            open FILE, "<", $file
-                or die "Couldn't open file '$file' for reading: $!\n";
-            my $name = undef;
-            my $version = undef;
-            LINE: while (<FILE>) {
-                chomp;
-                $name = $1 if m/^# Patch name: (.*)/o;
-                $version = $1 if m/^# Patch version: (.*)/o;
-                if (defined $name && defined $version) {
-                    $patches{$name} = $version;
-                    last LINE;
-                }
-            }
-            close FILE;
-        }
-        if (scalar keys %patches > 0) {
-            print PATCHES '#define PATCHES "';
-            while (my ($name, $version) = each %patches) {
-                print PATCHES "$name($version) ";                
-            }
-            print PATCHES '"', "\n";
-        } else {
-            print PATCHES "#undef PATCHES\n";
-        }
-    } else {
-        print PATCHES "#undef PATCHES\n";
-    }
-    print PATCHES "#endif /* PATCHES_H */\n";
-    close PATCHES;
-    
-    maybemove $tempfile, $patchfile;
-}
 
 sub make_switches {
     print "Rebuilding command switch file and header.\n";
